Force Expanded Notifications [2/2]
Change-Id: Ic4a19d7cf0e0e451f5a8419dbc7044118df3de42
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1224,7 +1224,11 @@
     <string name="disable_fc_notifications_summary">This will hide all force close notifications. Use with caution</string>
 
     <!-- QuickSettings haptic feedback -->
-    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_title">Vibrate on tap</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
+
+    <!-- Force expanded notifications -->
+    <string name="force_expanded_notifications_title">Force expanded notifications</string>
+    <string name="force_expanded_notifications_summary">Available only for apps that support it</string>
 
 </resources>
