--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1222,4 +1222,9 @@
     <!-- Disable FC notifications -->
     <string name="disable_fc_notifications_title">Disable FC notifications</string>
     <string name="disable_fc_notifications_summary">This will hide all force close notifications. Use with caution</string>
+
+    <!-- QuickSettings haptic feedback -->
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
+
 </resources>
