--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1158,7 +1158,7 @@
     <string name="gestures_preference_title">Gestures</string>
 
     <!-- Carbon gestures -->
-    <string name="carbon_gesture_preference_title">Carbon gestures</string>
+    <string name="carbon_gesture_preference_title">Carbon</string>
     <string name="carbon_gestures_summary">Configure custom global gestures</string>
     <string name="carbon_gestures_fingers_title">Fingers used for gesture (default 2)</string>
     <string name="carbon_gestures_fingers_unit">fingers</string>
@@ -1201,5 +1201,16 @@
     <!-- Volume up exit do not disturb -->
     <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
     <string name="volbtn_up_zen_summary">Allow volume up to exit do not disturb mode</string>
+
+    <!-- Edge gestures -->
+    <string name="edge_gestures_title">Edge</string>
+    <string name="edge_gestures_feedback_duration_title">Haptic feedback duration</string>
+    <string name="edge_gestures_long_press_delay_title">Delay until long press action starts</string>
+    <string name="edge_gestures_back_category_title">Back gesture</string>
+    <string name="edge_gestures_back_edges_title">Trigger back gesture from</string>
+    <string name="edge_gestures_landscape_back_edges_title">Trigger back gesture on landscape from</string>
+    <string name="edge_gestures_back_screen_percent_title">Back gesture must start below this percentage of the screen</string>
+    <string name="edge_gestures_back_screen_percent_summary">Trigger area: lower than % of screen</string>
+    <string name="edge_gestures_summary">Navigate using edge gestures</string>
 
 </resources>
