--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1203,7 +1203,8 @@
     <string name="volbtn_up_zen_summary">Allow volume up to exit do not disturb mode</string>
 
     <!-- Edge gestures -->
-    <string name="edge_gestures_title">Edge</string>
+    <string name="edge_gestures_title">Edge gestures</string>
+    <string name="edge_gestures_summary">Navigate using edge gestures</string>
     <string name="edge_gestures_feedback_duration_title">Haptic feedback duration</string>
     <string name="edge_gestures_long_press_delay_title">Delay until long press action starts</string>
     <string name="edge_gestures_back_category_title">Back gesture</string>
@@ -1211,6 +1212,5 @@
     <string name="edge_gestures_landscape_back_edges_title">Trigger back gesture on landscape from</string>
     <string name="edge_gestures_back_screen_percent_title">Back gesture must start below this percentage of the screen</string>
     <string name="edge_gestures_back_screen_percent_summary">Trigger area: lower than % of screen</string>
-    <string name="edge_gestures_summary">Navigate using edge gestures</string>
 
 </resources>
