--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -731,7 +731,7 @@
 
     <!-- DUI -->
     <string name="navbar_title">Navigation bar</string>
-    <string name="navbar_summary">Smartbar/Fling</string>
+    <string name="navbar_summary">Click for available modes and options</string>
     <string name="navbar_interface_title">Interface</string>
     <string name="navbar_size">Bar size</string>
     <string name="navbar_mode">Navigation mode</string>
@@ -1204,7 +1204,8 @@
 
     <!-- Edge gestures -->
     <string name="edge_gestures_title">Edge gestures</string>
-    <string name="edge_gestures_summary">Navigate using edge gestures</string>
+    <string name="edge_gestures_description">Swipe from bottom to trigger Home gesture, keep it pressed to open recents. Swipe from bottom left or bottom right to go back.</string>
+    <string name="edge_gestures_summary">Navigate using edge gestures. Click for options.</string>
     <string name="edge_gestures_feedback_duration_title">Haptic feedback duration</string>
     <string name="edge_gestures_long_press_delay_title">Delay until long press action starts</string>
     <string name="edge_gestures_back_category_title">Back gesture</string>
@@ -1212,5 +1213,10 @@
     <string name="edge_gestures_landscape_back_edges_title">Trigger back gesture on landscape from</string>
     <string name="edge_gestures_back_screen_percent_title">Back gesture must start below this percentage of the screen</string>
     <string name="edge_gestures_back_screen_percent_summary">Trigger area: lower than % of screen</string>
+
+    <!-- Navigation-->
+    <string name="navigation_title">Navigation</string>
+    <string name="navigation_description">Mutually exclusive modes of navigation. Disabling one automatically enables the other.</string>
+    <string name="navigation_summary">Stock/Smartbar/Fling/Gestures</string>
 
 </resources>
