--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -759,6 +759,22 @@
     <string name="default_settings">Stock settings</string>
     <string name="default_settings_summary">Stock AOSP navigation bar</string>
 
+    <!-- Edge gestures -->
+    <string name="edge_gestures_title">Edge gestures</string>
+    <string name="edge_gestures_description">Swipe from bottom to trigger Home gesture, keep it pressed to open recents. Swipe from bottom left or bottom right to go back.</string>
+    <string name="edge_gestures_summary">Navigate using edge gestures. Click for options.</string>
+    <string name="edge_gestures_feedback_duration_title">Haptic feedback duration</string>
+    <string name="edge_gestures_long_press_delay_title">Delay until long press action starts</string>
+    <string name="edge_gestures_back_category_title">Back gesture</string>
+    <string name="edge_gestures_back_edges_title">Trigger back gesture from</string>
+    <string name="edge_gestures_landscape_back_edges_title">Trigger back gesture on landscape from</string>
+    <string name="edge_gestures_back_screen_percent_title">Back gesture must start below this percentage of the screen</string>
+    <string name="edge_gestures_back_screen_percent_summary">Trigger area: lower than % of screen</string>
+    <string name="edge_gestures_back_show_ui_feedback_title">Back gesture animation</string>
+    <string name="edge_gestures_back_show_ui_feedback_summary">Show animated feedback on edges when back gesture is used</string>
+    <string name="edge_gestures_back_use_black_arrow_title">Back button dark color</string>
+    <string name="edge_gestures_back_use_black_arrow_summary">Show black back button instead of the white version</string>
+
     <!-- Actions dialog and default task values set in ActionPreference xml-->
     <string name="choose_action_title">Choose action</string>
     <string name="action_entry_default_action">Default settings</string>
@@ -1206,18 +1222,6 @@
     <!-- Volume up exit do not disturb -->
     <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
     <string name="volbtn_up_zen_summary">Allow volume up to exit do not disturb mode</string>
-
-    <!-- Edge gestures -->
-    <string name="edge_gestures_title">Edge gestures</string>
-    <string name="edge_gestures_description">Swipe from bottom to trigger Home gesture, keep it pressed to open recents. Swipe from bottom left or bottom right to go back.</string>
-    <string name="edge_gestures_summary">Navigate using edge gestures. Click for options.</string>
-    <string name="edge_gestures_feedback_duration_title">Haptic feedback duration</string>
-    <string name="edge_gestures_long_press_delay_title">Delay until long press action starts</string>
-    <string name="edge_gestures_back_category_title">Back gesture</string>
-    <string name="edge_gestures_back_edges_title">Trigger back gesture from</string>
-    <string name="edge_gestures_landscape_back_edges_title">Trigger back gesture on landscape from</string>
-    <string name="edge_gestures_back_screen_percent_title">Back gesture must start below this percentage of the screen</string>
-    <string name="edge_gestures_back_screen_percent_summary">Trigger area: lower than % of screen</string>
 
     <!-- Circle app bar -->
     <string name="category_app_circle_bar_title">App Circle Bar launcher</string>
